--- a/practice.html
+++ b/practice.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
+    <head>
+    </head>
     <body>
-        <h1>This is a Header</h1>
+        <h1>This is a header</h1>
         <p> This is a paragraph</p>
-        <p> THis is a second paragraph</p>
-        <p> This is a third paragraph</p>
+        <p>This is a second paragraph</p>
     </body>
 </html>
